Fixed background sizing and text wrapping on mobil

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@ body {
     background-color: var(--color-background);
 }
 
+body, html {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 @keyframes wobble {
     0% {
         transform: rotate(0deg);
